--- a/my_app/public/index.html
+++ b/my_app/public/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>my_app</title>
+    <script>
+        document.documentElement.style.fontSize = document.documentElement.clientWidth / 10 + 'px'
+    </script>
     <style>
     html,body{
-      margin: 0;
-      padding: 0 ;
+      
       width: 100%;
       height: 100%;
     }
     *{
-      position: relative;
+      
       margin: 0;
       padding: 0;
     }
